--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1",
+    "nanoid": "^5.0.6",
     "nodemailer": "^6.9.11",
     "pdfkit": "^0.14.0",
     "slugify": "^1.6.6",
