car documents-images upload  using multer & cloudinary

--- a/config.env
+++ b/config.env
@@ -15,9 +15,9 @@ EMAIL_USERNAME=itifinalproject5@gmail.com
 EMAIL_PASSWORD=irdjusxwxzrxqbqe
 
 # cloud configuration
-CLOUD_NAME:dmwmwsuws
-API_KEY:894796938191585
-API_SECRET:3jzHjOiO4Otb9pkCtW0AL7LmolU
+CLOUD_NAME=dmwmwsuws
+API_KEY=894796938191585
+API_SECRET=3jzHjOiO4Otb9pkCtW0AL7LmolU
 
 FOLDER_CLOUD_CARS=cars
-
+FOLDER_CLOUD_MESSAGES=messages
