--- a/config.env
+++ b/config.env
@@ -1,3 +1,4 @@
+# NODE_ENV=production
 NODE_ENV=development
 NAME=MotoRent
 PORT = 3000
@@ -21,3 +22,4 @@ API_SECRET=3jzHjOiO4Otb9pkCtW0AL7LmolU
 
 FOLDER_CLOUD_CARS=cars
 FOLDER_CLOUD_MESSAGES=messages
+FOLDER_CLOUD_USERS=messages
